docs/v0.9.3/_sources/gallery/tutorials/workflow.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/tutorials/workflow.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_tutorials_workflow.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_tutorials_workflow.py:


Workflow
========

This tutorial demonstrates how to simulate a flow cytometry experiment using the FlowCyPy library.
The simulation involves configuring a flow setup, defining a single population of particles, and
analyzing scattering signals from two detectors to produce a 2D density plot of scattering intensities.

Overview:
---------
1. Configure the flow cell and particle population.
2. Define the laser source and detector parameters.
3. Simulate the flow cytometry experiment.
4. Analyze the generated signals and visualize results.

.. GENERATED FROM PYTHON SOURCE LINES 19-23

Step 0: Import Necessary Libraries
-----------------------------------
Here, we import the necessary libraries and units for the simulation. The units module helps us
define physical quantities like meters, seconds, and watts in a concise and consistent manner.

.. GENERATED FROM PYTHON SOURCE LINES 23-28

.. code-block:: Python


    import numpy as np
    from FlowCyPy import units









.. GENERATED FROM PYTHON SOURCE LINES 29-33

Step 1: Configure Noise Settings
---------------------------------
Noise settings are configured to simulate real-world imperfections. In this example, we include noise
globally but exclude specific types, such as shot noise and thermal noise.

.. GENERATED FROM PYTHON SOURCE LINES 33-44

.. code-block:: Python


    from FlowCyPy import NoiseSetting

    NoiseSetting.include_noises = False
    # NoiseSetting.include_shot_noise = False
    # NoiseSetting.include_thermal_noise = False
    # NoiseSetting.include_dark_current_noise = False

    np.random.seed(3)  # Ensure reproducibility









.. GENERATED FROM PYTHON SOURCE LINES 45-49

Step 2: Configure the Laser Source
----------------------------------
The laser source generates light that interacts with the particles. Its parameters, like numerical
aperture and wavelength, affect how light scatters, governed by Mie theory.

.. GENERATED FROM PYTHON SOURCE LINES 49-59

.. code-block:: Python


    from FlowCyPy import GaussianBeam

    source = GaussianBeam(
        numerical_aperture=0.3 * units.AU,           # Numerical aperture
        wavelength=450 * units.nanometer,           # Wavelength
        optical_power=200 * units.milliwatt          # Optical power
    )









.. GENERATED FROM PYTHON SOURCE LINES 60-67

Step 3: Set Up the Flow Cell
----------------------------
The flow cell models the movement of particles in the cytometer. For example, the volume of fluid
passing through the cross-sectional area is calculated as:

.. math::
    \text{Flow Volume} = \text{Flow Speed} \times \text{Flow Area} \times \text{Run Time}

.. GENERATED FROM PYTHON SOURCE LINES 67-79

.. code-block:: Python


    from FlowCyPy.flow_cell import CircularFlowCell

    flow_cell = CircularFlowCell(
        volume_flow=0.8 * units.microliter / units.second,  # Flow volume
        radius=20 * units.micrometer,       # Cross-sectional area
        focusing_factor=0.99
    )

    flow_cell.plot_transverse_distribution(n_samples=300)





.. image-sg:: /gallery/tutorials/images/sphx_glr_workflow_001.png
   :alt: 3D Visualization of Particle Positions and Velocities in Rectangular Flow Cell
   :srcset: /gallery/tutorials/images/sphx_glr_workflow_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /opt/hostedtoolcache/Python/3.11.11/x64/lib/python3.11/site-packages/matplotlib/cbook.py:967: UnitStrippedWarning: The unit of the quantity is stripped when downcasting to ndarray.
      x = np.asarray(x)

    <Axes3D: title={'center': '3D Visualization of Particle Positions and Velocities in Rectangular Flow Cell'}, xlabel='x [µm]', ylabel='y [µm]', zlabel='Velocity [m/s]'>



.. GENERATED FROM PYTHON SOURCE LINES 80-87

Step 4: Define ScattererCollection and Population
-------------------------------------------------
The scatterer represents particles in the flow. The concentration of particles in the flow cell is
given by:

.. math::
    \text{Concentration} = \frac{\text{Number of Particles}}{\text{Volume of Flow}}

.. GENERATED FROM PYTHON SOURCE LINES 87-112

.. code-block:: Python


    from FlowCyPy import ScattererCollection
    from FlowCyPy.population import Exosome, Sphere, distribution

    scatterer_collection = ScattererCollection(medium_refractive_index=1.33 * units.RIU)

    exosome = Exosome(particle_count=5e9 * units.particle / units.milliliter)

    custom_population = Sphere(
        name='Pop 0',
        particle_count=5e9 * units.particle / units.milliliter,
        diameter=distribution.RosinRammler(characteristic_property=150 * units.nanometer, spread=30),
        refractive_index=distribution.Normal(mean=1.44 * units.RIU, std_dev=0.002 * units.RIU)
    )

    # Add an Exosome population
    scatterer_collection.add_population(exosome, custom_population)

    scatterer_collection.dilute(factor=8)

    # Initialize the scatterer with the flow cell
    df = scatterer_collection.get_population_dataframe(total_sampling=600, use_ratio=False)  # Visualize the particle population

    df.plot(x='Diameter', bins='auto')




.. image-sg:: /gallery/tutorials/images/sphx_glr_workflow_002.png
   :alt: Distribution of Diameter
   :srcset: /gallery/tutorials/images/sphx_glr_workflow_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Figure size 700x500 with 1 Axes>



.. GENERATED FROM PYTHON SOURCE LINES 113-117

Step 5: Define Detectors
------------------------
Detectors measure light intensity. Parameters like responsivity define the conversion of optical
power to electronic signals, and saturation level represents the maximum signal they can handle.

.. GENERATED FROM PYTHON SOURCE LINES 117-155

.. code-block:: Python


    from FlowCyPy.detector import Detector
    from FlowCyPy.signal_digitizer import SignalDigitizer

    signal_digitizer = SignalDigitizer(
        bit_depth='14bit',
        saturation_levels='auto',
        sampling_rate=60 * units.megahertz,
    )

    detector_0 = Detector(
        name='forward',
        phi_angle=0 * units.degree,                  # Forward scatter angle
        numerical_aperture=0.3 * units.AU,
        responsivity=1 * units.ampere / units.watt,
        resistance=50 * units.ohm,
        temperature=300 * units.kelvin
    )

    detector_1 = Detector(
        name='side',
        phi_angle=90 * units.degree,                 # Side scatter angle
        numerical_aperture=0.3 * units.AU,
        responsivity=1 * units.ampere / units.watt,
        resistance=50 * units.ohm,
        temperature=300 * units.kelvin,
    )


    detector_2 = Detector(
        name='det_2',
        phi_angle=30 * units.degree,                 # Side scatter angle
        numerical_aperture=0.3 * units.AU,
        responsivity=1 * units.ampere / units.watt,
        resistance=50 * units.ohm,
        temperature=300 * units.kelvin,
    )








.. GENERATED FROM PYTHON SOURCE LINES 156-163

Step 6: Simulate Flow Cytometry Experiment
------------------------------------------
The FlowCytometer combines all components to simulate scattering. The interaction between light
and particles follows Mie theory:

.. math::
    \sigma_s = \frac{2 \pi}{k} \sum_{n=1}^\infty (2n + 1) (\lvert a_n \rvert^2 + \lvert b_n \rvert^2)

.. GENERATED FROM PYTHON SOURCE LINES 163-184

.. code-block:: Python

    from FlowCyPy import FlowCytometer

    cytometer = FlowCytometer(
        source=source,
        scatterer_collection=scatterer_collection,
        signal_digitizer=signal_digitizer,
        detectors=[detector_0, detector_1, detector_2],
        flow_cell=flow_cell,
        background_power=0.001 * units.milliwatt
    )

    # Run the flow cytometry simulation
    cytometer.prepare_acquisition(run_time=0.1 * units.millisecond)
    acquisition = cytometer.get_acquisition()

    _ = acquisition.scatterer.plot(
        x='side',
        y='forward',
        z='RefractiveIndex'
    )




.. image-sg:: /gallery/tutorials/images/sphx_glr_workflow_003.png
   :alt: Scatterer Sampling Distribution
   :srcset: /gallery/tutorials/images/sphx_glr_workflow_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 185-186

Visualize the scatter signals from both detectors

.. GENERATED FROM PYTHON SOURCE LINES 186-188

.. code-block:: Python

    acquisition.analog.plot()




.. image-sg:: /gallery/tutorials/images/sphx_glr_workflow_004.png
   :alt: workflow
   :srcset: /gallery/tutorials/images/sphx_glr_workflow_004.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 189-193

Step 7: Analyze Detected Signals
--------------------------------
The Peak algorithm detects peaks in signals by analyzing local maxima within a defined
window size and threshold.

.. GENERATED FROM PYTHON SOURCE LINES 193-204

.. code-block:: Python

    triggered_acquisition = acquisition.run_triggering(
        threshold=0.2 * units.millivolt,
        trigger_detector_name='forward',
        max_triggers=35,
        pre_buffer=64,
        post_buffer=64
    )

    triggered_acquisition.analog.plot()





.. image-sg:: /gallery/tutorials/images/sphx_glr_workflow_005.png
   :alt: workflow
   :srcset: /gallery/tutorials/images/sphx_glr_workflow_005.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 205-206

Getting and plotting the extracted peaks.

.. GENERATED FROM PYTHON SOURCE LINES 206-217

.. code-block:: Python

    from FlowCyPy import peak_locator
    # peak_algorithm = peak_locator.ScipyPeakLocator(height=10, padding_value=-1)
    # peak_algorithm = peak_locator.BasicPeakLocator(compute_width=True)
    peak_algorithm = peak_locator.SlidingWindowPeakLocator(window_size=10, compute_width=True)


    peaks = triggered_acquisition.detect_peaks(peak_algorithm)


    peaks.plot(feature='Height', x='side', y='forward')




.. image-sg:: /gallery/tutorials/images/sphx_glr_workflow_006.png
   :alt: Peaks properties
   :srcset: /gallery/tutorials/images/sphx_glr_workflow_006.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <seaborn.axisgrid.JointGrid object at 0x7f5b08af4e10>



.. GENERATED FROM PYTHON SOURCE LINES 218-219

Step 8: Classifying the collected dataset

.. GENERATED FROM PYTHON SOURCE LINES 219-229

.. code-block:: Python

    from FlowCyPy.classifier import KmeansClassifier

    classifier = KmeansClassifier(number_of_cluster=2)

    data = classifier.run(
        dataframe=peaks.unstack('Detector'),
        features=['Height'],
        detectors=['side', 'forward']
    )

    _ = data.plot(feature='Height', x='side', y='forward')


.. image-sg:: /gallery/tutorials/images/sphx_glr_workflow_007.png
   :alt: Event classification
   :srcset: /gallery/tutorials/images/sphx_glr_workflow_007.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 7.351 seconds)


.. _sphx_glr_download_gallery_tutorials_workflow.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: workflow.ipynb <workflow.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: workflow.py <workflow.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: workflow.zip <workflow.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
